--- a/resources.qrc
+++ b/resources.qrc
@@ -5,5 +5,6 @@
     </qresource>
     <qresource prefix="ui">
         <file alias="main.qml">ui/main.qml</file>
+        <file alias="SolversModel.qml">ui/SolversModel.qml</file>
     </qresource>
 </RCC>
