--- a/resources.qrc
+++ b/resources.qrc
@@ -7,6 +7,7 @@
         <file alias="SolversModel.qml">ui/SolversModel.qml</file>
         <file alias="Validators.qml">ui/Validators.qml</file>
         <file alias="InputFieldDelegate.qml">ui/InputFieldDelegate.qml</file>
+        <file alias="OutputFieldDelegate.qml">ui/OutputFieldDelegate.qml</file>
         <file alias="SolversListDelegate.qml">ui/SolversListDelegate.qml</file>
         <file alias="SolverParamsForm.qml">ui/SolverParamsForm.qml</file>
     </qresource>
