--- a/resources.qrc
+++ b/resources.qrc
@@ -10,5 +10,6 @@
         <file alias="OutputFieldDelegate.qml">ui/OutputFieldDelegate.qml</file>
         <file alias="SolversListDelegate.qml">ui/SolversListDelegate.qml</file>
         <file alias="SolverParamsForm.qml">ui/SolverParamsForm.qml</file>
+        <file alias="RepeatableParamsForm.qml">ui/RepeatableParamsForm.qml</file>
     </qresource>
 </RCC>
